--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - pypy
   - pypy3
 script:
-  - coverage run -m zope.testrunner --test-path=src  --auto-color --auto-progress --all
+  - coverage run -m zope.testrunner --test-path=src
 after_success:
   - coveralls
 notifications:
